<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">

    //
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/city"
        android:layout_weight="2"
        android:textSize="20dp"
        android:id="@+id/tvCityCard"
        android:gravity="center_vertical|center_horizontal"
        android:padding="2dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/type"
        android:layout_weight="1"
        android:textSize="20dp"
        android:id="@+id/tvTypeCard"
        android:gravity="center_vertical|center_horizontal"
        android:padding="2dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:layout_weight="2"
        android:textSize="20dp"
        android:id="@+id/tvNameCard"
        android:gravity="center_horizontal|center_vertical"
        android:padding="2dp"/>
</LinearLayout>