<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.charity.EditPasswordActivity"
    android:padding="30dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tv_old"
    tools:ignore="MissingConstraints"
    android:text="@string/old_password"
    android:layout_marginTop="40dp"
    app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_old"
        android:layout_marginTop="10dp"
        android:hint="@string/old_password"
        android:textSize="25dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_old"
        app:layout_constraintTop_toBottomOf="@id/tv_old"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_new"
        android:text="@string/new_password"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/et_old"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_new"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_old"
        app:layout_constraintTop_toBottomOf="@id/tv_new" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_re_new"
        android:text="@string/retype_new_password"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_new"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_re_new"
        android:layout_marginTop="10dp"
        android:hint="@string/retype_new_password"
        android:inputType="textPassword"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_new"
        app:layout_constraintTop_toBottomOf="@id/tv_re_new" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@id/et_re_new"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        android:text="@string/confirm"
        android:textSize="25dp"
        android:padding="10dp"
        android:background="#78f"
        android:onClick="confirm_OnClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>
