<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.charity.CharityViewDonationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/type"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_donation_type_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:prompt="@string/type"
                android:textSize="20dp" />
        </LinearLayout>


        //Name

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_donation_name_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>


        //donor

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/donor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_donor_name_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>


//city
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/city"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_city_name_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/condition" />

            <TextView
                android:id="@+id/tv_state_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:textSize="20dp" />
        </LinearLayout>


        //description

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:layout_margin="5dp"
                android:text="@string/desc"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_donation_desc_item"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_margin="5dp"

                android:hint="@string/desc"
                android:lines="3"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnDelivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/delivered"
                android:textColor="#fff"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/call" />
</androidx.constraintlayout.widget.ConstraintLayout>
