<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/profile_iv"
                android:src="@drawable/usrusr"
                android:layout_gravity="center"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_tv"
                android:hint="@string/profile"
                android:textColorHint="#000000"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="30dp"
                android:inputType="number"
                android:textColor="#000"
                android:gravity="center"
                android:layout_weight="7"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/aboutus_iv"
                android:src="@drawable/aboutus"
                android:layout_gravity="center"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/aboutus_tv"
                android:hint="@string/aboutus"
                android:textColorHint="#000000"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="30dp"
                android:inputType="number"
                android:textColor="#000"
                android:gravity="center"
                android:layout_weight="7"/>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/logout_iv"
                android:src="@drawable/logout"
                android:layout_gravity="center"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/logout_tv"
                android:hint="@string/logout"
                android:textColorHint="#000000"
                android:layout_marginLeft="15dp"
                android:background="#00000000"
                android:letterSpacing="0.1"
                android:textSize="30dp"
                android:inputType="number"
                android:textColor="#000"
                android:gravity="center"
                android:layout_weight="7"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>